# Essentials

./: CLAUDE.md  main.py  requirements.txt  setup_jack.sh  setup_mac.sh  setup_windows.bat  setup_windows.ps1
cpp/: BUILD.md  CMakeLists.txt
cpp/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
cpp/Source/Engine/: Chorus.h  Delay.h  Envelope.h  Filter.h  LFO.h  Oscillator.h  Reverb.h  Synth.h  Voice.h
effects/: chorus.py  delay.py  reverb.py
engine/: device_manager.py  envelope.py  filter.py  jack_client.py  lfo.py  midi_manager.py  oscillator.py  synth.py  voice.py
gui/: knob.py  main_window.py  piano.py
